Fix green color on hover over buttons & alignment in few pages(#200)

--- a/src/app/components/profile/profile.component.scss
+++ b/src/app/components/profile/profile.component.scss
@@ -39,7 +39,7 @@
 			margin-bottom: 14px;
 		}
 		.change-password {
-			margin-top: 60px;
+			margin-top: 25px;
 			margin-bottom: 14px;
 			.change-password-text {
 				margin-right: 20px;
